# HaskellPlayground

./: .gitignore  euler_problems.hs
CIS194-Spring13/Week1/: Homework.hs
Exercism/: LeapYear.hs
HackerRank/FunctionalProgramming/: .gitignore  package.yaml
HaskellProgrammingFromFirstPrinciples/: notes.md
HaskellProgrammingFromFirstPrinciples/Chapter10/: databaseProcessing.hs  fibs.hs  fold.hs  rewriteUsingFolds.hs  understandingFolds.hs  warmUp.hs
HaskellProgrammingFromFirstPrinciples/Chapter11/: arity.hs  asPatterns.hs  binaryTree.hs  cardinality.hs  chapterExercises.hs  constructingAndDeconstructing.hs  dataConstructorsAndValues.hs  deconstructingValues.hs  dogTypes.hs  forExample.hs  generalizedNewtype.hs  howDoesYourGardenGrow.hs  huttonsRazor.hs  languageExercises.hs  logicGoats.hs  newType.hs  normalForm.hs  partiallyApplyTypes.hs  phoneExercise.hs  pityTheBool.hs  productTypes.hs  programmers.hs  quantFunc.hs  quantProd.hs  quantSum.hs  records.hs  sumTypes.hs  theQuad.hs  typesAndData.hs  vehicles.hs  vigenereCipher.hs
HaskellProgrammingFromFirstPrinciples/Chapter12/: binaryTree.hs  eitherLibrary.hs  itIsOnlyNatural.hs  unfolds.hs  (+3 more)
LearnYouAHaskell/: cases.hs  guards.hs  higherOrderFunctions.hs  listComprehension.hs  patternMatching.hs  recursion.hs  typesAndTypeclasses.hs
Playground/: Advent.hs  Audio.hs  AudioHelp.txt  HaskellProblems.hs  HuttonsWhatIsAMonad.hs  WhatIsIOMonad.hs
Playground/physics-sandbox/: ChangeLog.md  LICENSE  README.md  physics-sandbox.cabal  stack.yaml
Playground/physics-sandbox/src/: Main.hs
ProjectEuler/: Problem92.hs
(+338 files in other folders)
