cabal-version: >=1.10
name: physics-sandbox
version: 0.1.0.0
license: MIT
license-file: LICENSE
maintainer: Ed Allonby
author: Ed Allonby <edward.allonby@gmail.com>
homepage: https://github.com/EdAllonby/HaskellPlayground
category: Game
build-type: Simple
extra-source-files:
    ChangeLog.md

executable physics-sandbox-exec
    main-is: Main.hs
    hs-source-dirs: src
    other-modules:
    default-language: Haskell2010
    build-depends:
        base >=4.9 && <5,
        array -any,
        gloss -any,
        lens -any